# matrix-appservice-sms

./: .gitignore  Cargo.toml  README.md  Rocket.example.toml  sms-registration.yaml
migrations/20180216090450_initial/: down.sql  up.sql
migrations/20180524130627_messages/: up.sql
src/: future.rs  main.rs  models.rs  pool.rs  recipient_factory.rs  schema.rs  sms_processor.rs  store.rs  users.rs  util.rs
