[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "matrix-appservice-sms"
version = "0.1.0"

[dependencies]
dotenv = "0.9"
env_logger = "0.5"
failure = "0.1"
log = "0.4"
r2d2 = "0.8"
r2d2-diesel = "1.0"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-timer = "0.2"

[dependencies.diesel]
features = ["postgres"]
version = "1.0"

[dependencies.futures-await]
git = "https://github.com/alexcrichton/futures-await"

[dependencies.glitch-in-the-matrix]
branch = "develop"
git = "https://github.com/eeeeeta/glitch-in-the-matrix"

[dependencies.huawei-modem]
git = "https://github.com/eeeeeta/huawei-modem"

[profile]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
